Feat/bankmod mvp (#701)
* refactor: phase 4A — move daemon and sdlc boundary code into their domain modules

Move DaemonsController, SdlcDashboardController, SdlcDashboardView, and their
specs from the root project and shared-web into daemon-domain and sdlc-domain
respectively. SdlcDashboardView's package is renamed shared.web -> sdlc.boundary
and HtmlViews loses its now-unused sdlc delegates. sdlc-domain gains
sharedWebCore + domainBceDeps to support the rendered view.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>

* refactor(memory): move memory boundary, control, view, and store module into memory-domain

MemoryController, EmbeddingService, MemoryRepositoryES, MemoryStoreModule, and
MemoryView are all single-domain — relocate them to memory-domain. The view's
package renames shared.web -> memory.boundary; MemoryStoreModule keeps its
shared.store package (same-package file in the owning module). memoryDomain
gains sharedWebCore + configDomain + llm4zio deps, zio-eclipsestore-gigamap,
and upgrades from domainDeps to domainBceDeps.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>

* refactor(knowledge): move KnowledgeController and KnowledgeView into knowledge-domain

KnowledgeController (plus its spec) and KnowledgeView are single-domain — relocate
them to knowledge-domain. The view's package renames shared.web -> knowledge.boundary.
knowledgeDomain gains sharedWebCore + workspaceDomain deps and upgrades from
domainDeps to domainBceDeps. KnowledgeExtractionService stays in root for now —
blocked by its db.ChatRepository import, which Phase 4D will untangle.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>

* refactor: phase 4B — distribute demo, evolution, foundation store, and entity tests

Move staged files into their BCE modules and add required test deps:
- demo-domain: MockAgentRunner (control) + spec; DemoConfigSpec, MockIssueCatalogSpec
- evolution-domain: EvolutionTemplates (control); EvolutionProposalSpec, EvolutionProposalReposi