@@ -1,4 +1,4 @@
-ThisBuild / scalaVersion := "3.5.2"
+ThisBuild / scalaVersion := "3.8.3"
 ThisBuild / organization := "io.github.riccardomerolla"
 ThisBuild / organizationName := "Riccardo Merolla"
 ThisBuild / organizationHomepage := Some(url("https://github.com/riccardomerolla"))
@@ -7,9 +7,17 @@ ThisBuild / dependencyOverrides += "com.lihaoyi" % "sourcecode_2.13" % "0.4.2"
 
 addCommandAlias("fmt", " ; scalafixAll ; scalafmtAll")
 addCommandAlias("check", "; scalafixAll --check; scalafmtCheckAll")
+addCommandAlias(
+  "bankmodDocs",
+  "bankmodApp/runMain bankmod.app.DocsGenerator",
+)
+addCommandAlias(
+  "bankmodSeedExample",
+  "bankmodApp/runMain bankmod.app.SampleGraphSeeder",
+)
 
 // Centralized version management
-val zioVersion = "2.1.24"
+val zioVersion = "2.1.25"
 val zioProcessVersion = "0.8.0"
 val zioJsonVersion = "0.9.0"
 val zioHttpVersion = "3.10.1"
@@ -25,6 +33,8 @@ val zioEclipseStoreVersion = "2.2.2"
 val zioSchemaVersion       = "1.8.0"
 val scalaMetaVersion = "4.13.6"
 val bot4sTelegramCoreVersion = "7.0.0"
+val ironVersion            = "2.6.0"
+val zioBlocksSchemaVersion = "0.0.33"
 
 // Common dependencies shared across modules
 val zioCoreDeps = Seq(
@@ -104,6 +114,10 @@ inThisBuild(List(
     "-Wunused:all",
     "-Xmax-inlines",
     "128",
+    // Scala 3.8 deprecated -Xfatal-warnings in favor of -Werror; sbt-tpolecat still
+    // emits the old flag, whose deprecation warning itself fails under -Werror.
+    // Silence that specific message until tpolecat catches up.
+    "-Wconf:msg=-Xfatal-warnings is a deprecated alias:silent",
   ),
   semanticdbEnabled                := true,
 ))
@@ -214,15 +228,19 @@ lazy val activityDomain = (project in file("modules/activity-domain"))
   .settings(foundationSettings)
   .settings(
     name := "activity-domain",
-    libraryDependencies ++= domainBceDeps,
+    libraryDependencies ++= domainBceDeps ++ Seq(
+      "io.github.riccardomerolla" %% "zio-eclipsestore-gigamap" % zioEclipseStoreVersion % Test,
+    ),
   )
 
 lazy val memoryDomain = (project in file("modules/memory-domain"))
-  .dependsOn(sharedIds, sharedStoreCore)
+  .dependsOn(sharedIds, sharedStoreCore, sharedWebCore, configDomain, llm4zio)
   .settings(foundationSettings)
   .settings(
     name := "memory-domain",
-    libraryDependencies ++= domainDeps,
+    libraryDependencies ++= domainBceDeps ++ Seq(
+      "io.github.riccardomerolla" %% "zio-eclipsestore-gigamap" % zioEclipseStoreVersion,
+    ),
   )
 
 lazy val governanceDomain = (project in file("modules/governance-domain"))
@@ -234,7 +252,7 @@ lazy val governanceDomain = (project in file("modules/governance-domain"))
   )
 
 lazy val agentDomain = (project in file("modules/agent-domain"))
-  .dependsOn(sharedIds, sharedErrors, sharedStoreCore, sharedWebCore, orchestrationDomain, workspaceDomain, configDomain)
+  .dependsOn(sharedIds, sharedErrors, sharedStoreCore, sharedWebCore, configDomain)
   .settings(foundationSettings)
   .settings(
     name := "agent-domain",
@@ -266,11 +284,13 @@ lazy val planDomain = (project in file("modules/plan-domain"))
   )
 
 lazy val taskrunDomain = (project in file("modules/taskrun-domain"))
-  .dependsOn(sharedIds, sharedErrors, sharedStoreCore, sharedJson, sharedWebCore, configDomain)
+  .dependsOn(sharedIds, sharedErrors, sharedStoreCore, sharedJson, sharedWebCore, configDomain, activityDomain)
   .settings(foundationSettings)
   .settings(
     name := "taskrun-domain",
-    libraryDependencies ++= domainBceDeps,
+    libraryDependencies ++= domainBceDeps ++ Seq(
+      "io.github.riccardomerolla" %% "zio-eclipsestore-gigamap" % zioEclipseStoreVersion % Test,
+    ),
   )
 
 lazy val boardDomain = (project in file("modules/board-domain"))
@@ -282,19 +302,22 @@ lazy val boardDomain = (project in file("modules/board-domain"))
   )
 
 lazy val knowledgeDomain = (project in file("modules/knowledge-domain"))
-  .dependsOn(sharedIds, sharedErrors, sharedStoreCore, analysisDomain, memoryDomain)
+  .dependsOn(sharedIds, sharedErrors, sharedStoreCore, sharedWebCore, analysisDomain,
+    memoryDomain, workspaceDomain, conversationDomain, issuesDomain, llm4zio)
   .settings(foundationSettings)
   .settings(
     name := "knowledge-domain",
-    libraryDependencies ++= domainDeps,
+    libraryDependencies ++= domainBceDeps ++ Seq(
+      "io.github.riccardomerolla" %% "zio-eclipsestore-gigamap" % zioEclipseStoreVersion % Test,
+    ),
   )
 
 lazy val projectDomain = (project in file("modules/project-domain"))
-  .dependsOn(sharedIds, sharedErrors, sharedStoreCore, workspaceDomain)
+  .dependsOn(sharedIds, sharedErrors, sharedStoreCore, sharedWebCore, workspaceDomain)
   .settings(foundationSettings)
   .settings(
     name := "project-domain",
-    libraryDependencies ++= domainDeps,
+    libraryDependencies ++= domainBceDeps,
   )
 
 lazy val configDomain = (project in file("modules/config-domain"))
@@ -302,7 +325,12 @@ lazy val configDomain = (project in file("modules/config-domain"))
   .settings(foundationSettings)
   .settings(
     name := "config-domain",
-    libraryDependencies ++= domainBceDeps,
+    libraryDependencies ++= domainBceDeps ++ Seq(
+      "dev.zio" %% "zio-config" % zioConfigVersion,
+      "dev.zio" %% "zio-config-typesafe" % zioConfigVersion,
+      "dev.zio" %% "zio-config-magnolia" % zioConfigVersion,
+      "io.github.riccardomerolla" %% "zio-eclipsestore-gigamap" % zioEclipseStoreVersion % Test,
+    ),
   )
 
 lazy val conversationDomain = (project in file("modules/conversation-domain"))
@@ -310,7 +338,9 @@ lazy val conversationDomain = (project in file("modules/conversation-domain"))
   .settings(foundationSettings)
   .settings(
     name := "conversation-domain",
-    libraryDependencies ++= domainDeps,
+    libraryDependencies ++= domainDeps ++ Seq(
+      "io.github.riccardomerolla" %% "zio-eclipsestore-gigamap" % zioEclipseStoreVersion % Test,
+    ),
   )
 
 lazy val daemonDomain = (project in file("modules/daemon-domain"))
@@ -331,11 +361,11 @@ lazy val analysisDomain = (project in file("modules/analysis-domain"))
   )
 
 lazy val workspaceDomain = (project in file("modules/workspace-domain"))
-  .dependsOn(sharedIds, sharedErrors, sharedStoreCore)
+  .dependsOn(sharedIds, sharedErrors, sharedStoreCore, sharedWebCore, analysisDomain)
   .settings(foundationSettings)
   .settings(
     name := "workspace-domain",
-    libraryDependencies ++= domainDeps ++ Seq(
+    libraryDependencies ++= domainBceDeps ++ Seq(
       "dev.zio" %% "zio-streams" % zioVersion,
       "dev.zio" %% "zio-process" % zioProcessVersion,
     ),
@@ -358,7 +388,9 @@ lazy val gatewayDomain = (project in file("modules/gateway-domain"))
 
 lazy val orchestrationDomain = (project in file("modules/orchestration-domain"))
   .dependsOn(sharedIds, sharedErrors, sharedStoreCore, gatewayDomain, configDomain, planDomain,
-    activityDomain, issuesDomain, taskrunDomain, workspaceDomain, sharedServices, conversationDomain)
+    activityDomain, agentDomain, issuesDomain, taskrunDomain, workspaceDomain, sharedServices,
+    conversationDomain, memoryDomain, llm4zio, boardDomain, projectDomain, governanceDomain,
+    decisionDomain, demoDomain, knowledgeDomain, analysisDomain)
   .settings(foundationSettings)
   .settings(
     name := "orchestration-domain",
@@ -371,7 +403,9 @@ lazy val evolutionDomain = (project in file("modules/evolution-domain"))
   .settings(foundationSettings)
   .settings(
     name := "evolution-domain",
-    libraryDependencies ++= domainDeps,
+    libraryDependencies ++= domainDeps ++ Seq(
+      "io.github.riccardomerolla" %% "zio-eclipsestore-gigamap" % zioEclipseStoreVersion % Test,
+    ),
   )
 
 lazy val sharedWeb = (project in file("modules/shared-web"))
@@ -394,22 +428,21 @@ lazy val sharedWeb = (project in file("modules/shared-web"))
 
 lazy val issuesDomain = (project in file("modules/issues-domain"))
   .dependsOn(sharedIds, sharedErrors, sharedStoreCore, boardDomain, workspaceDomain,
-    taskrunDomain, analysisDomain)
+    taskrunDomain, analysisDomain, configDomain)
   .settings(foundationSettings)
   .settings(
     name := "issues-domain",
-    libraryDependencies ++= domainBceDeps,
+    libraryDependencies ++= domainBceDeps ++ Seq(
+      "io.github.riccardomerolla" %% "zio-eclipsestore-gigamap" % zioEclipseStoreVersion % Test,
+    ),
   )
 
 lazy val demoDomain = (project in file("modules/demo-domain"))
-  .dependsOn(sharedIds, boardDomain)
+  .dependsOn(sharedIds, sharedWebCore, boardDomain)
   .settings(foundationSettings)
   .settings(
     name := "demo-domain",
-    libraryDependencies ++= Seq(
-      "dev.zio" %% "zio" % zioVersion,
-      zioJsonDep,
-    ),
+    libraryDependencies ++= domainBceDeps,
   )
 
 // ── LLM library ──────────────────────────────────────────────────────────────
@@ -428,12 +461,12 @@ lazy val llm4zio = (project in file("llm4zio"))
   )
 
 lazy val sdlcDomain = (project in file("modules/sdlc-domain"))
-  .dependsOn(sharedIds, sharedErrors, activityDomain, configDomain, daemonDomain,
+  .dependsOn(sharedIds, sharedErrors, sharedWebCore, activityDomain, configDomain, daemonDomain,
     decisionDomain, evolutionDomain, governanceDomain, issuesDomain, planDomain, specificationDomain)
   .settings(foundationSettings)
   .settings(
     name := "sdlc-domain",
-    libraryDependencies ++= domainDeps,
+    libraryDependencies ++= domainBceDeps,
   )
 
 lazy val cli = (project in file("modules/cli"))
@@ -470,6 +503,78 @@ lazy val cli = (project in file("modules/cli"))
     ),
   )
 
+// ── Bankmod parallel assembly ─────────────────────────────────────────────────
+
+val bankmodDeps = Seq(
+  "io.github.iltotore"  %% "iron"             % ironVersion,
+  "dev.zio"             %% "zio-blocks-schema" % zioBlocksSchemaVersion,
+) ++ domainTestDeps
+
+lazy val bankmodGraphModel = (project in file("modules/bankmod-graph-model"))
+  .settings(foundationSettings)
+  .settings(
+    name := "bankmod-graph-model",
+    libraryDependencies ++= bankmodDeps,
+    testFrameworks += new TestFramework("zio.test.sbt.ZTestFramework"),
+  )
+
+lazy val bankmodGraphValidate = (project in file("modules/bankmod-graph-validate"))
+  .dependsOn(bankmodGraphModel)
+  .settings(foundationSettings)
+  .settings(
+    name := "bankmod-graph-validate",
+    libraryDependencies ++= domainDeps,
+    testFrameworks += new TestFramework("zio.test.sbt.ZTestFramework"),
+  )
+
+lazy val bankmodGraphRender = (project in file("modules/bankmod-graph-render"))
+  .dependsOn(bankmodGraphModel)
+  .settings(foundationSettings)
+  .settings(
+    name := "bankmod-graph-render",
+    libraryDependencies ++= bankmodDeps,
+    testFrameworks += new TestFramework("zio.test.sbt.ZTestFramework"),
+  )
+
+lazy val bankmodMcpTools = (project in file("modules/bankmod-mcp-tools"))
+  .dependsOn(bankmodGraphModel, bankmodGraphValidate, bankmodGraphRender, sharedIds, sharedErrors)
+  .settings(foundationSettings)
+  .settings(
+    name := "bankmod-mcp-tools",
+    libraryDependencies ++= bankmodDeps ++ Seq(
+      "com.jamesward" %% "zio-http-mcp"          % "0.0.6",
+      zioHttpDep,
+      "dev.zio"       %% "zio-schema"            % zioSchemaVersion,
+      "dev.zio"       %% "zio-schema-derivation" % zioSchemaVersion,
+      "dev.zio"       %% "zio-schema-json"       % zioSchemaVersion,
+    ),
+    testFrameworks += new TestFramework("zio.test.sbt.ZTestFramework"),
+  )
+
+lazy val bankmodApp = (project in file("modules/bankmod-app"))
+  .dependsOn(bankmodGraphModel, bankmodGraphValidate, bankmodGraphRender, bankmodMcpTools, sharedIds, sharedErrors, sharedStoreCore)
+  .settings(foundationSettings)
+  .settings(
+    name := "bankmod-app",
+    libraryDependencies ++= domainBceDeps,
+    testFrameworks += new TestFramework("zio.test.sbt.ZTestFramework"),
+    Compile / mainClass := Some("bankmod.app.BankmodMain"),
+    run / fork := true,
+    run / javaOptions ++= Seq(
+      "--enable-native-access=ALL-UNNAMED",
+      "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+      "--add-opens", "java.base/java.util=ALL-UNNAMED",
+      "--add-opens", "java.base/java.nio=ALL-UNNAMED",
+    ),
+  )
+
+lazy val bankmod = (project in file("modules/bankmod"))
+  .aggregate(bankmodGraphModel, bankmodGraphValidate, bankmodGraphRender, bankmodMcpTools, bankmodApp)
+  .settings(
+    name := "bankmod",
+    publish / skip := true,
+  )
+
 lazy val allModules = Seq(
   llm4zio, sharedJson, sharedIds, sharedErrors, sharedStoreCore, sharedServices, sharedWebCore,
   activityDomain, memoryDomain, governanceDomain, agentDomain, decisionDomain, specificationDomain,
@@ -477,6 +582,7 @@ lazy val allModules = Seq(
   conversationDomain, daemonDomain, analysisDomain, workspaceDomain, gatewayDomain,
   orchestrationDomain, evolutionDomain, issuesDomain, demoDomain, sharedWeb,
   sdlcDomain,
+  bankmodGraphModel, bankmodGraphValidate, bankmodGraphRender, bankmodMcpTools, bankmodApp,
 )
 
 lazy val root = (project in file("."))
